ALl changed completed

--- a/parallex.html
+++ b/parallex.html
@@ -12,11 +12,11 @@
 <body>
     <div id="wrapper">
         <div class="wrapper-x">
-            <a href="" style="--clr:#1e9bff"><span>Home</span ><i></i></a>
-                <a href="" style="--clr:red"><span>About</span><i></i></a>
-                <a href="" style="--clr:#6eff3e"><span>Services</span><i></i></a>
-                <a href="" style="--clr:#6eff3e"><span>Login</span><i></i></a>
-                <a href="" style="--clr:#6eff3e"><span>Signup</span><i></i></a>
+            <a href="" style="--clr:#1e9bff"><span>Adventure</span ><i></i></a>
+                <a href="" style="--clr:red"><span>Para Glaging</span><i></i></a>
+                <a href="" style="--clr:#6eff3e"><span>Surfing</span><i></i></a>
+                <a href="" style="--clr:#6eff3e"><span>Biking</span><i></i></a>
+                <!-- <a href="" style="--clr:#6eff3e"><span>Responsive Page</span><i></i></a> -->
         </div>
 
 
